--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "banner-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://sagivo.github.io/banner-web",
+  "homepage": "https://cryptobillboard.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
